Enhance the rectangular crop grabber
* Add size grips to the selection rectangle in the rectangular crop grabber
* Add an initial help text when the rectangular crop grabber is activated
* Add ability to quit the rectangular crop grabber by using the Escape key

--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -7,7 +7,7 @@
 /* Define to 1 if we have KIPI */
 #cmakedefine HAVE_KIPI 1
 
-/* Set the KSnapshot version from CMake */
+/* Set the KScreenGenie version from CMake */
 #cmakedefine KSG_VERSION "@KSG_VERSION@"
 
 #endif
