Add KIPI support
* Spins off the Send-To Menu handling to its own class (KSGSendToMenu). It should be easier to make fancier menus in the future
* Starts populating the menu after the first time the GUI is shown, rather than the first time the Send To button is clicked
* The Send-To menu is now populated in the GUI thread itself (not in its own thread). Simpler code, nothing breaks
* KIPI is now fully decoupled from the KSG GUI. The parent is a dummy QWidget inside KSGSendToMenu
* License changes due to KIPI code. KScreenGenie is now GPLv2, not LGPLv2

Have fun!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ set(
         KScreenGenieGUI.cpp
         KSGImageProvider.cpp
         CropScreenshotGrabber.cpp
-        SendToActionsPopulator.cpp
+        KSGSendToMenu.cpp
 )
 qt5_add_resources (KSG_SRCS_RESOURCES QmlResources/QmlResources.qrc)
 
