--- a/desktop/org.kde.kscreengenie.desktop
+++ b/desktop/org.kde.kscreengenie.desktop
@@ -16,7 +16,7 @@ Name[x-test]=xxKScreenGeniexx
 Categories=Qt;KDE;Utility;
 MimeType=
 Exec=kscreengenie
-Icon=kscreengenie
+Icon=ksnapshot
 Type=Application
 Terminal=false
 StartupNotify=false
