* Improve temp file saving * [wayland] Load the X11 backend only on platform = xcb. Load Dummy backend otherwise * Change window title based on Save As file name

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,8 @@ set(
     KSG_SRCS_DEFAULT
         Main.cpp
         ImageGrabber.cpp
-        KScreenGenie.cpp
+        DummyImageGrabber.cpp
+        KSCore.cpp
         ScreenClipper.cpp
         Gui/KSMainWindow.cpp
         Gui/KSWidget.cpp
