Add notification, random fixes, prepare for kdereview, 1.9.96

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,7 @@ find_package(
 find_package(
     KF5 ${KF5_MIN_VERSION} REQUIRED
         CoreAddons
-        Declarative
+        Notifications
         Config
         I18n
         KIO
