--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,7 +54,7 @@ target_link_libraries(
         Qt5::DBus
         Qt5::PrintSupport
         KF5::CoreAddons
-        KF5::Declarative
+        KF5::Notifications
         KF5::ConfigGui
         KF5::I18n
         KF5::KIOWidgets
