Clean up buttons, add copy to clipboard visual feedback, add quicksave configuration options (location, filename format), clean up keyboard shortcuts. Documentation is now inconsistent

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ set(
         Gui/KSMainWindow.cpp
         Gui/KSWidget.cpp
         Gui/KSImageWidget.cpp
+        Gui/KSSaveConfigDialog.cpp
         Gui/KSSendToMenu.cpp
 )
 
