Rename to Kapture

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
-# KScreenGenie project
+# Kapture project
 
-project(KScreenGenie)
-set(KSG_VERSION_MAJOR 2)
-set(KSG_VERSION_MINOR 0)
-set(KSG_VERSION_PATCH 1)
-set(KSG_VERSION "${KSG_VERSION_MAJOR}.${KSG_VERSION_MINOR}.${KSG_VERSION_PATCH}")
+project(Kapture)
+
+# KDE Application Version, managed by release script
+set(KDE_APPLICATIONS_VERSION_MAJOR "15")
+set(KDE_APPLICATIONS_VERSION_MINOR "08")
+set(KDE_APPLICATIONS_VERSION_MICRO "999")
+set(KDE_APPLICATIONS_VERSION "${KDE_APPLICATIONS_VERSION_MAJOR}.${KDE_APPLICATIONS_VERSION_MINOR}.${KDE_APPLICATIONS_VERSION_MICRO}")
+set(KAPTURE_VERSION ${KDE_APPLICATIONS_VERSION})
 
 # minimum requirements
 
