--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -3,5 +3,5 @@
 KDOCTOOLS_CREATE_HANDBOOK(
     index.docbook
         INSTALL_DESTINATION ${KDE_INSTALL_DOCBUNDLEDIR}/en
-        SUBDIR ksnapshot
+        SUBDIR kapture
 )
