--- a/desktop/org.kde.kapture.desktop
+++ b/desktop/org.kde.kapture.desktop
@@ -18,31 +18,11 @@ GenericName[sv]=Verktyg för att ta skärmbilder
 GenericName[uk]=Програма для створення знімків екрана
 GenericName[x-test]=xxScreenshot Capture Utilityxx
 GenericName[zh_CN]=屏幕截图工具
-Name=KScreenGenie
-Name[bg]=KScreenGenie
-Name[ca]=KScreenGenie
-Name[cs]=KScreenGenie
-Name[de]=KScreenGenie
-Name[en_GB]=KScreenGenie
-Name[es]=KScreenGenie
-Name[fi]=KScreenGenie
-Name[gl]=KScreenGenie
-Name[nl]=KScreenGenie
-Name[pl]=KDżinEkranu
-Name[pt]=KScreenGenie
-Name[pt_BR]=KScreenGenie
-Name[ro]=KScreenGenie
-Name[sk]=KScreenGenie
-Name[sv]=Kscreengenie
-Name[uk]=KScreenGenie
-Name[x-test]=xxKScreenGeniexx
-Name[zh_CN]=KScreenGenie
+Name=Kapture
 Categories=Qt;KDE;Utility;
 MimeType=
-Exec=kscreengenie
+Exec=kapture
 Icon=ksnapshot
 Type=Application
 Terminal=false
 StartupNotify=false
-
-
