Rename to Spectacle

--- a/desktop/CMakeLists.txt
+++ b/desktop/CMakeLists.txt
@@ -1,11 +1,11 @@
 # install the .desktop and rc files in the correct place
 
 install(
-    PROGRAMS org.kde.kapture.desktop
+    PROGRAMS org.kde.spectacle.desktop
     DESTINATION ${XDG_APPS_INSTALL_DIR}
 )
 
 install(
-    FILES kapture.notifyrc
+    FILES spectacle.notifyrc
     DESTINATION ${KNOTIFYRC_INSTALL_DIR}
 )
