--- a/desktop/org.kde.spectacle.desktop
+++ b/desktop/org.kde.spectacle.desktop
@@ -18,21 +18,11 @@ GenericName[sv]=Verktyg för att ta skärmbilder
 GenericName[uk]=Програма для створення знімків екрана
 GenericName[x-test]=xxScreenshot Capture Utilityxx
 GenericName[zh_CN]=屏幕截图工具
-Name=Kapture
-Name[ca]=Kapture
-Name[es]=Kapture
-Name[fi]=Kapture
-Name[nl]=Kapture
-Name[pl]=Kapture
-Name[pt]=Kapture
-Name[pt_BR]=Kapture
-Name[sv]=Kapture
-Name[uk]=Kapture
-Name[x-test]=xxKapturexx
+Name=Spectacle
 Categories=Qt;KDE;Utility;
 MimeType=
-Exec=kapture
-Icon=ksnapshot
+Exec=spectacle
+Icon=spectacle
 Type=Application
 Terminal=false
 StartupNotify=false
