--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
-# Kapture project
+# Spectacle project
 
-project(Kapture)
+project(Spectacle)
 
 # KDE Application Version, managed by release script
 set(KDE_APPLICATIONS_VERSION_MAJOR "15")
 set(KDE_APPLICATIONS_VERSION_MINOR "08")
 set(KDE_APPLICATIONS_VERSION_MICRO "999")
 set(KDE_APPLICATIONS_VERSION "${KDE_APPLICATIONS_VERSION_MAJOR}.${KDE_APPLICATIONS_VERSION_MINOR}.${KDE_APPLICATIONS_VERSION_MICRO}")
-set(KAPTURE_VERSION ${KDE_APPLICATIONS_VERSION})
+set(SPECTACLE_VERSION ${KDE_APPLICATIONS_VERSION})
 
 # minimum requirements
 
@@ -30,12 +30,8 @@ set(
 include(KDEInstallDirs)
 include(KDECMakeSettings)
 include(KDECompilerSettings)
-include(ECMOptionalAddSubdirectory)
 include(ECMInstallIcons)
 include(ECMSetupVersion)
-include(ECMMarkNonGuiExecutable)
-include(ECMGenerateHeaders)
-include(GenerateExportHeader)
 include(FeatureSummary)
 
 find_package(
