--- a/src/.reviewboardrc
+++ b/src/.reviewboardrc
@@ -1,3 +1,3 @@
 REVIEWBOARD_URL = "https://git.reviewboard.kde.org"
-REPOSITORY = 'git://anongit.kde.org/kapture'
+REPOSITORY = 'git://anongit.kde.org/spectacle'
 PEOPLE='bgupta'
