--- a/desktop/org.kde.spectacle.desktop
+++ b/desktop/org.kde.spectacle.desktop
@@ -26,3 +26,5 @@ Icon=spectacle
 Type=Application
 Terminal=false
 StartupNotify=false
+X-DBUS-StartupType=Multi
+X-DBUS-ServiceName=org.freedesktop.Screenshot
