--- a/dbus/org.freedesktop.Screenshot.service.in
+++ b/dbus/org.freedesktop.Screenshot.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
 Name=org.freedesktop.Screenshot
-Exec=@CMAKE_INSTALL_PREFIX@/bin/spectacle 
+Exec=@CMAKE_INSTALL_PREFIX@/bin/spectacle --dbus
