--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,10 @@ set(SPECTACLE_VERSION ${KDE_APPLICATIONS_VERSION})
 # minimum requirements
 
 cmake_minimum_required (VERSION 2.8.12 FATAL_ERROR)
+if (POLICY CMP0063)
+   cmake_policy(SET CMP0063 NEW)
+endif()
+
 set(QT_MIN_VERSION     "5.4.0")
 set(KF5_MIN_VERSION    "5.6.0")
 set(PLASMA_MIN_VERSION "5.2.0")
