Correct DBus ServiceName (org.freedesktop.Screenshot → org.kde.Spectacle)
Prevents an error dialog showing up after launching Spectacle:
```
Error launching /usr/share/applications/org.kde.spectacle.desktop.
Either KLauncher is not running anymore, or it failed to start the
application.
```

--- a/desktop/org.kde.spectacle.desktop
+++ b/desktop/org.kde.spectacle.desktop
@@ -43,4 +43,4 @@ Type=Application
 Terminal=false
 StartupNotify=false
 X-DBUS-StartupType=Multi
-X-DBUS-ServiceName=org.freedesktop.Screenshot
+X-DBUS-ServiceName=org.kde.Spectacle
