[2/n] refactor saving code, new export menu

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,7 +16,7 @@ set(
         Gui/KSWidget.cpp
         Gui/KSImageWidget.cpp
         Gui/KSSaveConfigDialog.cpp
-        Gui/KSSendToMenu.cpp
+        Gui/ExportMenu.cpp
         Gui/ScreenClipper.cpp
         Gui/SmartSpinBox.cpp
 )
