--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,7 +54,7 @@ target_link_libraries(
         KF5::KIOWidgets
         KF5::WindowSystem
         KF5::XmlGui
-        KDEExperimental::PurposeWidgets
+#        KDEExperimental::PurposeWidgets
 )
 
 if(XCB_FOUND)
