Make use of Purpose within Spectacle
Makes it possible to share using the Purpose framework.

REVIEW: 126458

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,8 @@ find_package(
         DocTools
 )
 
+find_package(KDEExperimentalPurpose REQUIRED)
+
 # optional components
 
 find_package(KF5Kipi)
