Add Jump List Actions
This adds four Desktop Actions to Spectacle which are accessible from the Task Manager
and Kickoff/Kicker starting in Plasma 5.6.

REVIEW: 126465

--- a/desktop/org.kde.spectacle.desktop
+++ b/desktop/org.kde.spectacle.desktop
@@ -51,5 +51,22 @@ Icon=spectacle
 Type=Application
 Terminal=false
 StartupNotify=false
+Actions=FullScreenScreenShot;CurrentMonitorScreenShot;ActiveWindowScreenShot;RectangularRegionScreenShot;
 X-DBUS-StartupType=Multi
 X-DBUS-ServiceName=org.kde.Spectacle
+
+[Desktop Action FullScreenScreenShot]
+Name=Capture Whole Screen
+Exec=spectacle -f
+
+[Desktop Action CurrentMonitorScreenShot]
+Name=Capture Current Monitor
+Exec=spectacle -m
+
+[Desktop Action ActiveWindowScreenShot]
+Name=Capture Current Window
+Exec=spectacle -a
+
+[Desktop Action RectangularRegionScreenShot]
+Name=Capture Rectangular Region
+Exec=spectacle -r
