Rename Jump List Actions to be consistent with rest of the application
Help speaks of *entire desktop* and GUI speaks of *active* window

--- a/desktop/org.kde.spectacle.desktop
+++ b/desktop/org.kde.spectacle.desktop
@@ -56,7 +56,7 @@ X-DBUS-StartupType=Multi
 X-DBUS-ServiceName=org.kde.Spectacle
 
 [Desktop Action FullScreenScreenShot]
-Name=Capture Whole Screen
+Name=Capture Entire Desktop
 Exec=spectacle -f
 
 [Desktop Action CurrentMonitorScreenShot]
@@ -64,7 +64,7 @@ Name=Capture Current Monitor
 Exec=spectacle -m
 
 [Desktop Action ActiveWindowScreenShot]
-Name=Capture Current Window
+Name=Capture Active Window
 Exec=spectacle -a
 
 [Desktop Action RectangularRegionScreenShot]
