Make Purpose build-time optional, refactor code

--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -7,6 +7,9 @@
 /* Define to 1 if we have KIPI */
 #cmakedefine KIPI_FOUND 1
 
+/* Define to 1 if we have Purpose */
+#cmakedefine PURPOSE_FOUND 1
+
 /* Set the Spectacle version from CMake */
 #cmakedefine SPECTACLE_VERSION "@SPECTACLE_VERSION@"
 
