--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,14 +60,17 @@ find_package(
         DocTools
 )
 
-find_package(KDEExperimentalPurpose REQUIRED)
-
 # optional components
 
 find_package(KF5Kipi)
 if (KF5Kipi_FOUND)
     set(KIPI_FOUND 1)
 endif ()
+
+find_package(KDEExperimentalPurpose)
+if (KDEExperimentalPurpose_FOUND)
+    set(PURPOSE_FOUND 1)
+endif()
 
 find_package(XCB COMPONENTS XFIXES IMAGE UTIL CURSOR)
 if (XCB_FOUND)
