Fix Save As, switch to Qt inbuilt Save As dialog * Remember last save as location * Correctly select mimetype and filename extension * Confirm on overwrite
BUG: 357817
BUG: 357818
FIXED-IN: 16.04

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ set(
         Main.cpp
         ExportManager.cpp
         SpectacleCore.cpp
+        SpectacleConfig.cpp
         SpectacleDBusAdapter.cpp
         PlatformBackends/ImageGrabber.cpp
         PlatformBackends/DummyImageGrabber.cpp
