add release codename for 16.04

--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -13,4 +13,7 @@
 /* Set the Spectacle version from CMake */
 #cmakedefine SPECTACLE_VERSION "@SPECTACLE_VERSION@"
 
+/* set the release codename */
+#define SPECTACLE_CODENAME "So Much For Subtlety"
+
 #endif
