Create a new preferences dialog and handling system.
Tunables include:
* Default save options as before
* Dynamic save button
* Remember last rectangular selection
* Use light mask colour for rectangular selection

BUG: 357846
FIXED-IN: 16.04

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,10 +16,13 @@ set(
         Gui/KSMainWindow.cpp
         Gui/KSWidget.cpp
         Gui/KSImageWidget.cpp
-        Gui/KSSaveConfigDialog.cpp
         Gui/ExportMenu.cpp
         Gui/ScreenClipper.cpp
         Gui/SmartSpinBox.cpp
+        Gui/SettingsDialog/SettingsDialog.cpp
+        Gui/SettingsDialog/SettingsPage.cpp
+        Gui/SettingsDialog/SaveOptionsPage.cpp
+        Gui/SettingsDialog/GeneralOptionsPage.cpp
 )
 
 if(XCB_FOUND)
