--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,15 +72,32 @@ if (KDEExperimentalPurpose_FOUND)
 endif()
 
 find_package(XCB COMPONENTS XFIXES IMAGE UTIL CURSOR)
+set(XCB_COMPONENTS_ERRORS FALSE)
 if (XCB_FOUND)
-    find_package(Qt5X11Extras ${QT_MIN_VERSION} REQUIRED)
-    find_package(KF5Screen ${PLASMA_MIN_VERSION} REQUIRED)
+	find_package(Qt5X11Extras ${QT_MIN_VERSION} REQUIRED)
+	find_package(KF5Screen ${PLASMA_MIN_VERSION} REQUIRED)
+endif()
+set(XCB_COMPONENTS_FOUND TRUE)
+if(NOT XCB_XFIXES_FOUND)
+	set(XCB_COMPONENTS_ERRORS "${XCB_COMPONENTS_ERRORS} XCB-XFIXES ")
+	set(XCB_COMPONENTS_FOUND FALSE)
+endif()
+if(NOT XCB_IMAGE_FOUND)
+	set(XCB_COMPONENTS_ERRORS "${XCB_COMPONENTS_ERRORS} XCB-IMAGE ")
+	set(XCB_COMPONENTS_FOUND FALSE)
+endif()
+if(NOT XCB_UTIL_FOUND)
+	set(XCB_COMPONENTS_ERRORS "${XCB_COMPONENTS_ERRORS} XCB-UTIL ")
+	set(XCB_COMPONENTS_FOUND FALSE)
+endif()
+if(NOT XCB_CURSOR_FOUND)
+	set(XCB_COMPONENTS_ERRORS "${XCB_COMPONENTS_ERRORS} XCB-CURSOR ")
+	set(XCB_COMPONENTS_FOUND FALSE)
 endif()
 
 # fail build if none of the platform backends can be found
-
-if (!XCB_FOUND)
-    message(FATAL_ERROR "No suitable backend platform was found. Currenty supported platforms are: XCB")
+if (NOT XCB_FOUND OR NOT XCB_COMPONENTS_FOUND)
+    message(FATAL_ERROR "No suitable backend platform was found. Currenty supported platforms are: XCB Components Required: ${XCB_COMPONENTS_ERRORS}")
 endif()
 
 # hand off to subdirectories
