add_definitions(-DQT_NO_URL_CAST_FROM_STRING) + fix compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,8 @@ if (NOT XCB_FOUND OR NOT XCB_COMPONENTS_FOUND)
     message(FATAL_ERROR "No suitable backend platform was found. Currenty supported platforms are: XCB Components Required: ${XCB_COMPONENTS_ERRORS}")
 endif()
 
+add_definitions(-DQT_NO_URL_CAST_FROM_STRING)
+
 # hand off to subdirectories
 
 add_subdirectory(src)
