add appdata file for spectacle
REVIEW:128326

--- a/desktop/CMakeLists.txt
+++ b/desktop/CMakeLists.txt
@@ -14,3 +14,8 @@ install(
     FILES spectacle.khotkeys
     DESTINATION ${DATA_INSTALL_DIR}/khotkeys
 )
+
+install(
+    FILES org.kde.spectacle.appdata.xml
+    DESTINATION ${KDE_INSTALL_METAINFODIR}
+)
