--- a/src/Config.h.in
+++ b/src/Config.h.in
@@ -14,6 +14,6 @@
 #cmakedefine SPECTACLE_VERSION "@SPECTACLE_VERSION@"
 
 /* set the release codename */
-#define SPECTACLE_CODENAME "Sorry For Any Inconvenience"
+#define SPECTACLE_CODENAME "Everything Is Going To Be Alright"
 
 #endif
