--- a/.arcconfig
+++ b/.arcconfig
@@ -1,4 +1,3 @@
 {
-  "phabricator.uri" : "https://phabricator.kde.org/",
-  "project.name"    : "Marble"
+  "phabricator.uri" : "https://phabricator.kde.org/"
 }
