Add new button "Record screen" that allows to select a Screen Recording tool
Summary:
Adds a new button "Record screen" that allows to select a screen recording tool, currently Peek and SimpleScreenRecorder (and soon vokoscreen: https://phabricator.kde.org/D10390)

{F5698788}

Moved from Reviewboard: https://git.reviewboard.kde.org/r/130215/

Reviewers: ngraham, #spectacle, rkflx

Reviewed By: ngraham, #spectacle, rkflx

Subscribers: rkflx

Maniphest Tasks: T7841

Differential Revision: https://phabricator.kde.org/D10295

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -75,6 +75,7 @@ target_link_libraries(
         KF5::WindowSystem
         KF5::XmlGui
         KF5::Declarative
+        KF5::NewStuff
 )
 
 if(XCB_FOUND)
