--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -99,7 +99,7 @@ endif()
 if(KDEExperimentalPurpose_FOUND)
     target_link_libraries (
         spectacle
-            KDEExperimental::PurposeWidgets
+            KF5::PurposeWidgets
     )
 endif()
 
